# misis2024f-24-03-kuznetsov-m-m

./: CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0231a.cpp  0263a.cpp  0266a.cpp  0271a.cpp  0281a.cpp  0978a.cpp  1330A  1352a.cpp  1512c.cpp  158A.cpp  1670B.cpp  169A  1717b.cpp  1721B.cpp  1721b.cpp  1873D.cpp  1873c.cpp  339B  4A  50A  617A.cpp  791A.cpp  895A  978B  CMakeLists.txt
prj.lab/choker/: choker.cpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  complex_doctest.cpp  complex_test.cpp  rational_doctest.cpp  rational_test.cpp
