set(CMAKE_CXX_STANDARD 20)

add_executable(4A 4A.cpp)
add_executable(50A 50A.cpp)
add_executable(158A 158A.cpp)
add_executable(231A 231A.cpp)
add_executable(263A 263A.cpp)
add_executable(266A 266A.cpp)
add_executable(271A 271A.cpp)
add_executable(276A 276A.cpp)
add_executable(281A 281A.cpp)
add_executable(339B 339B.cpp)
add_executable(617A 617A.cpp)
add_executable(791A 791A.cpp)
add_executable(978A 978A.cpp)
add_executable(1330A 1330A.cpp)
add_executable(1352A 1352A.cpp)
add_executable(1512C 1512C.cpp)
add_executable(1670B(29 tests failed time limit) 1670B(29 tests failed time limit).cpp)
add_executable(1717B 1717B.cpp)
add_executable(1721B 1721B.cpp)
add_executable(1872A 1872A.cpp)
add_executable(1873C 1873C.cpp)
add_executable(1873D 1873D.cpp)
